fix navbar alignment problems
Former-commit-id: e9d52dd6adbaa24f4af36d68d2c9f1dc695a3285

--- a/css/igv.scss
+++ b/css/igv.scss
@@ -187,6 +187,7 @@ $igv-track-components-margin: 0px;
 
   // igv logo
   .igv-logo {
+    all: initial;
     width: 34px;
     height: $igv-navbar-height;
     //margin-top:6px;
